--- a/module-1/lab-lambda-functions/your-code/main.ipynb
+++ b/module-1/lab-lambda-functions/your-code/main.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -170,6 +170,8 @@
      "output_type": "stream",
      "text": [
       "1\n",
+      "0\n",
+      "Introduce un número:5\n",
       "0\n"
      ]
     }
@@ -186,7 +188,8 @@
     "    return lambda a: 1 if a%b == 0 else 0\n",
     "\n",
     "print(divisor(2)(4))\n",
-    "print(divisor(7)(3))    "
+    "print(divisor(7)(3))\n",
+    "print(divisor(3)(int(input(\"Introduce un número: \"))))"
    ]
   },
   {
@@ -281,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +293,7 @@
        "[(1,), (2,), (3,), (4,), (5,)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,14 +315,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Green', 'eggs'),\n",
+       " ('cheese', 'cheese'),\n",
+       " ('English', 'cucumber'),\n",
+       " ('tomato', 'tomato')]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = ['Green', 'cheese', 'English', 'tomato']\n",
     "list2 = ['eggs', 'cheese', 'cucumber', 'tomato']\n",
     "\n",
-    "#Your code here:\n"
+    "#Your code here:\n",
+    "suma = lambda l1, l2: [x for x in zip(l1,l2)]\n",
+    "suma(list1, list2)"
    ]
   },
   {
@@ -335,14 +354,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Essay', 'Political Science'),\n",
+       " ('Homework', 'Computer Science'),\n",
+       " ('Lab', 'Engineering'),\n",
+       " ('Module', 'Mathematics')]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = ['Engineering', 'Computer Science', 'Political Science', 'Mathematics']\n",
     "list2 = ['Lab', 'Homework', 'Essay', 'Module']\n",
     "\n",
-    "# Your code here:\n"
+    "\n",
+    "# Your code here:\n",
+    "\n",
+    "suma = lambda l1, l2: [(x, dict(zip(l2, l1))[x]) for x in sorted(dict(zip(l2, l1)))]\n",
+    "\n",
+    "suma(list1,list2)"
    ]
   },
   {
@@ -356,13 +394,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Toyota', 1995), ('Honda', 1997), ('Audi', 2001), ('BMW', 2005)]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = {'Honda': 1997, 'Toyota': 1995, 'Audi': 2001, 'BMW': 2005}\n",
     "\n",
-    "# Your code here:"
+    "# Your code here:\n",
+    "\n",
+    "sorted(d.items(), key = lambda x: x[1])"
    ]
   },
   {
