--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        " 'his']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "'the'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,6 +144,7 @@
     "    \n",
     "    # Your code here:\n",
     "    \n",
+    "    #Otra solución:\n",
     "    #return re.split('{', x)[0]\n",
     "    #reference(\"the{7}\")\n",
     "    \n",
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,9 +180,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['the', 'beloved']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def line_break(x):\n",
     "    '''\n",
@@ -195,7 +207,9 @@
     "    \n",
     "    # Your code here:\n",
     "    \n",
-    "    "
+    "    return x.split('\\n')\n",
+    "\n",
+    "line_break('the\\nbeloved')"
    ]
   },
   {
@@ -207,12 +221,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['PROPHET', '', '|Almustafa,'],\n",
+       " ['the'],\n",
+       " ['chosen'],\n",
+       " ['and'],\n",
+       " ['the', 'beloved,'],\n",
+       " ['who'],\n",
+       " ['was'],\n",
+       " ['a'],\n",
+       " ['dawn'],\n",
+       " ['unto'],\n",
+       " ['his']]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "prophet_line = list(map(line_break, prophet_reference))\n",
+    "\n",
+    "prophet_line[0:11]"
    ]
   },
   {
@@ -224,12 +262,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PROPHET',\n",
+       " '',\n",
+       " '|Almustafa,',\n",
+       " 'the',\n",
+       " 'chosen',\n",
+       " 'and',\n",
+       " 'the',\n",
+       " 'beloved,',\n",
+       " 'who',\n",
+       " 'was',\n",
+       " 'a',\n",
+       " 'dawn',\n",
+       " 'unto',\n",
+       " 'his',\n",
+       " 'own',\n",
+       " 'day,',\n",
+       " 'had',\n",
+       " 'waited',\n",
+       " 'twelve',\n",
+       " 'years']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "#for i in prophet_line:\n",
+    "#    for palabra in i:\n",
+    "#       prophet_flat.append.(palabra)\n",
+    "\n",
+    "\n",
+    "prophet_flat = [palabra for i in prophet_line for palabra in i]\n",
+    "\n",
+    "prophet_flat[0:20]"
    ]
   },
   {
@@ -243,9 +319,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def word_filter(x):\n",
     "    '''\n",
@@ -265,7 +352,12 @@
     "    \n",
     "    # Your code here:\n",
     "    \n",
-    "    "
+    "    if x in word_list:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "word_filter('and')"
    ]
   },
   {
@@ -273,6 +365,48 @@
    "metadata": {},
    "source": [
     "Use the `filter()` function to filter out the words speficied in the `word_filter()` function. Store the filtered list in the variable `prophet_filter`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PROPHET',\n",
+       " '',\n",
+       " '|Almustafa,',\n",
+       " 'chosen',\n",
+       " 'beloved,',\n",
+       " 'who',\n",
+       " 'was',\n",
+       " 'dawn',\n",
+       " 'unto',\n",
+       " 'his',\n",
+       " 'own',\n",
+       " 'day,',\n",
+       " 'had',\n",
+       " 'waited',\n",
+       " 'twelve',\n",
+       " 'years',\n",
+       " 'in',\n",
+       " 'city',\n",
+       " 'of',\n",
+       " 'Orphalese',\n",
+       " 'for']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prophet_filter = list(filter(word_filter, prophet_flat))\n",
+    "\n",
+    "prophet_filter[0:21]"
    ]
   },
   {
@@ -286,16 +420,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def word_filter_case(x):\n",
     "   \n",
     "    word_list = ['and', 'the', 'a', 'an']\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
+    " \n",
+    "    if x.lower() in word_list:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "word_filter_case('And')\n",
+    "\n",
     "    "
    ]
   },
