--- a/module-2/lab-hypothesis-testing/your-code/challenge-1.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/challenge-1.ipynb
@@ -19,13 +19,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from scipy import stats\n",
+    "\n",
+    "from scipy.stats import norm\n",
+    "from scipy.stats import binom\n",
+    "from scipy.stats import normaltest\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -39,9 +47,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import dataset\n",
     "\n",
@@ -63,12 +213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def t_test_features(s1, s2, features=['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Total']):\n",
-    "    \"\"\"Test means of a feature set of two samples\n",
+    "    \"\"\"\n",
+    "    Test means of a feature set of two samples\n",
     "    \n",
     "    Args:\n",
     "        s1 (dataframe): sample 1\n",
@@ -81,6 +232,9 @@
     "    results = {}\n",
     "\n",
     "    # Your code here\n",
+    "    \n",
+    "    for x in features:\n",
+    "        results[x] = stats.ttest_ind(s1[x], s2[x], equal_var = False).pvalue\n",
     "    \n",
     "    return results"
    ]
@@ -106,11 +260,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 1.0026911708035284e-13,\n",
+       " 'Attack': 2.520372449236646e-16,\n",
+       " 'Defense': 4.8269984949193316e-11,\n",
+       " 'Sp. Atk': 1.5514614112239812e-21,\n",
+       " 'Sp. Def': 2.2949327864052826e-15,\n",
+       " 'Speed': 1.049016311882451e-18,\n",
+       " 'Total': 9.357954335957446e-47}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "legendary = pokemon.loc[pokemon['Legendary'] == True]\n",
+    "\n",
+    "normal = pokemon.loc[pokemon['Legendary'] == False]\n",
+    "\n",
+    "t_test_features(legendary, normal)"
    ]
   },
   {
@@ -121,12 +298,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your comment here"
+    "Cuando el P-value es muy bajo, que es el caso, rechazas la null hypothesis. Esto quiere decir que sí, los pokemon legendarios tienen las estadísticas más altas."
    ]
   },
   {
@@ -138,11 +313,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.14551697834219623,\n",
+       " 'Attack': 0.24721958967217725,\n",
+       " 'Defense': 0.5677711011725426,\n",
+       " 'Sp. Atk': 0.12332165977104394,\n",
+       " 'Sp. Def': 0.18829872292645752,\n",
+       " 'Speed': 0.00239265937312135,\n",
+       " 'Total': 0.5631377907941676}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "gen1 = pokemon.loc[pokemon['Generation'] == 1]\n",
+    "\n",
+    "gen2 = pokemon.loc[pokemon['Generation'] == 2]\n",
+    "\n",
+    "t_test_features(gen1, gen2)"
    ]
   },
   {
@@ -153,12 +349,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your comment here"
+    "En este caso tenemos más variedad de p-values. Para rechazar la null hypothesis, se considera que el p-value tiene que ser menor de 0.05. \n",
+    "La vamos a rechazar en todos las estadísticas menos en Speed, que el p-value es 0.0024. Esto quiere decir que de una a otra generación, sí que cambia el Speed. "
    ]
   },
   {
@@ -170,11 +365,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.11314389855379421,\n",
+       " 'Attack': 0.00014932578145948305,\n",
+       " 'Defense': 2.7978540411514693e-08,\n",
+       " 'Sp. Atk': 0.00013876216585667842,\n",
+       " 'Sp. Def': 0.00010730610934512779,\n",
+       " 'Speed': 0.02421703281819094,\n",
+       " 'Total': 1.1157056505229961e-07}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "singletype = pokemon.loc[pokemon['Type 2'].isnull()]\n",
+    "\n",
+    "twotype = pokemon.loc[pokemon['Type 2'].notnull()]\n",
+    "\n",
+    "t_test_features(singletype, twotype)"
    ]
   },
   {
@@ -185,12 +401,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your comment here"
+    "En este caso, rechazamos la null hypothesis en la mayoría de las estadísticas porque los p-values son menores que 0.05. Esto quiere decir que los pokemon de 2 tipos por lo general tienen mejores estadísticas.\n",
+    "La única null hypothesis que no rechazamos es HP."
    ]
   },
   {
@@ -204,11 +419,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ttest_relResult(statistic=4.325566393330478, pvalue=1.7140303479358558e-05)\n",
+      "Ttest_relResult(statistic=0.853986188453353, pvalue=0.3933685997548122)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(stats.ttest_rel(pokemon['Attack'], pokemon['Defense']))\n",
+    "\n",
+    "print(stats.ttest_rel(pokemon['Sp. Atk'], pokemon['Sp. Def']))\n"
    ]
   },
   {
@@ -219,13 +447,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos ver por los p-values que en ninguno de los casos aceptamos la null. Quiere decir que sí, hay diferencias significativas entre attack y defense, y entre sp. atk y sp. def."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your comment here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
