--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -140,244 +140,34 @@
        "      <td>NaN</td>\n",
        "      <td>19.86</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>ABBASI,  CHRISTOPHER</td>\n",
-       "      <td>STAFF ASST TO THE ALDERMAN</td>\n",
-       "      <td>CITY COUNCIL</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Salary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>50436.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>ABBATACOLA,  ROBERT J</td>\n",
-       "      <td>ELECTRICAL MECHANIC</td>\n",
-       "      <td>AVIATION</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Hourly</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>46.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>ABBATE,  JOSEPH L</td>\n",
-       "      <td>POOL MOTOR TRUCK DRIVER</td>\n",
-       "      <td>STREETS &amp; SAN</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Hourly</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>ABBATEMARCO,  JAMES J</td>\n",
-       "      <td>FIRE ENGINEER-EMT</td>\n",
-       "      <td>FIRE</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Salary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>103350.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>ABBATE,  TERRY M</td>\n",
-       "      <td>POLICE OFFICER</td>\n",
-       "      <td>POLICE</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Salary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>93354.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>ABBOTT,  BETTY L</td>\n",
-       "      <td>FOSTER GRANDPARENT</td>\n",
-       "      <td>FAMILY &amp; SUPPORT</td>\n",
-       "      <td>P</td>\n",
-       "      <td>Hourly</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>ABDALLAH,  ZAID</td>\n",
-       "      <td>POLICE OFFICER</td>\n",
-       "      <td>POLICE</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Salary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>84054.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>ABDELHADI,  ABDALMAHD</td>\n",
-       "      <td>POLICE OFFICER</td>\n",
-       "      <td>POLICE</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Salary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>87006.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>ABDELLATIF,  AREF R</td>\n",
-       "      <td>FIREFIGHTER (PER ARBITRATORS AWARD)-PARAMEDIC</td>\n",
-       "      <td>FIRE</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Salary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>102228.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>ABDELMAJEID,  AZIZ</td>\n",
-       "      <td>POLICE OFFICER</td>\n",
-       "      <td>POLICE</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Salary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>84054.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>ABDOLLAHZADEH,  ALI</td>\n",
-       "      <td>FIREFIGHTER/PARAMEDIC</td>\n",
-       "      <td>FIRE</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Salary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>91272.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>ABDUL-KARIM,  MUHAMMAD A</td>\n",
-       "      <td>ENGINEERING TECHNICIAN VI</td>\n",
-       "      <td>WATER MGMNT</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Salary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>111492.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>ABDULLAH,  DANIEL N</td>\n",
-       "      <td>FIREFIGHTER-EMT</td>\n",
-       "      <td>FIRE</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Salary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>95484.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>ABDULLAH,  LAKENYA N</td>\n",
-       "      <td>CROSSING GUARD</td>\n",
-       "      <td>OEMC</td>\n",
-       "      <td>P</td>\n",
-       "      <td>Hourly</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>17.68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>ABDULLAH,  RASHAD</td>\n",
-       "      <td>ELECTRICAL MECHANIC (AUTOMOTIVE)</td>\n",
-       "      <td>GENERAL SERVICES</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Hourly</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>46.10</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        Name                                     Job Titles  \\\n",
-       "0          AARON,  JEFFERY M                                       SERGEANT   \n",
-       "1            AARON,  KARINA          POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
-       "2        AARON,  KIMBERLEI R                       CHIEF CONTRACT EXPEDITER   \n",
-       "3        ABAD JR,  VICENTE M                              CIVIL ENGINEER IV   \n",
-       "4          ABASCAL,  REECE E                    TRAFFIC CONTROL AIDE-HOURLY   \n",
-       "5      ABBASI,  CHRISTOPHER                      STAFF ASST TO THE ALDERMAN   \n",
-       "6      ABBATACOLA,  ROBERT J                            ELECTRICAL MECHANIC   \n",
-       "7         ABBATE,  JOSEPH L                         POOL MOTOR TRUCK DRIVER   \n",
-       "8      ABBATEMARCO,  JAMES J                              FIRE ENGINEER-EMT   \n",
-       "9           ABBATE,  TERRY M                                 POLICE OFFICER   \n",
-       "10          ABBOTT,  BETTY L                             FOSTER GRANDPARENT   \n",
-       "11          ABDALLAH,  ZAID                                  POLICE OFFICER   \n",
-       "12    ABDELHADI,  ABDALMAHD                                  POLICE OFFICER   \n",
-       "13       ABDELLATIF,  AREF R  FIREFIGHTER (PER ARBITRATORS AWARD)-PARAMEDIC   \n",
-       "14       ABDELMAJEID,  AZIZ                                  POLICE OFFICER   \n",
-       "15      ABDOLLAHZADEH,  ALI                           FIREFIGHTER/PARAMEDIC   \n",
-       "16  ABDUL-KARIM,  MUHAMMAD A                      ENGINEERING TECHNICIAN VI   \n",
-       "17       ABDULLAH,  DANIEL N                                FIREFIGHTER-EMT   \n",
-       "18      ABDULLAH,  LAKENYA N                                 CROSSING GUARD   \n",
-       "19        ABDULLAH,  RASHAD                ELECTRICAL MECHANIC (AUTOMOTIVE)   \n",
+       "                  Name                              Job Titles  \\\n",
+       "0    AARON,  JEFFERY M                                SERGEANT   \n",
+       "1      AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
+       "2  AARON,  KIMBERLEI R                CHIEF CONTRACT EXPEDITER   \n",
+       "3  ABAD JR,  VICENTE M                       CIVIL ENGINEER IV   \n",
+       "4    ABASCAL,  REECE E             TRAFFIC CONTROL AIDE-HOURLY   \n",
        "\n",
-       "          Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
-       "0             POLICE                 F           Salary            NaN   \n",
-       "1             POLICE                 F           Salary            NaN   \n",
-       "2   GENERAL SERVICES                 F           Salary            NaN   \n",
-       "3        WATER MGMNT                 F           Salary            NaN   \n",
-       "4               OEMC                 P           Hourly           20.0   \n",
-       "5       CITY COUNCIL                 F           Salary            NaN   \n",
-       "6           AVIATION                 F           Hourly           40.0   \n",
-       "7      STREETS & SAN                 F           Hourly           40.0   \n",
-       "8               FIRE                 F           Salary            NaN   \n",
-       "9             POLICE                 F           Salary            NaN   \n",
-       "10  FAMILY & SUPPORT                 P           Hourly           20.0   \n",
-       "11            POLICE                 F           Salary            NaN   \n",
-       "12            POLICE                 F           Salary            NaN   \n",
-       "13              FIRE                 F           Salary            NaN   \n",
-       "14            POLICE                 F           Salary            NaN   \n",
-       "15              FIRE                 F           Salary            NaN   \n",
-       "16       WATER MGMNT                 F           Salary            NaN   \n",
-       "17              FIRE                 F           Salary            NaN   \n",
-       "18              OEMC                 P           Hourly           20.0   \n",
-       "19  GENERAL SERVICES                 F           Hourly           40.0   \n",
+       "         Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
+       "0            POLICE                 F           Salary            NaN   \n",
+       "1            POLICE                 F           Salary            NaN   \n",
+       "2  GENERAL SERVICES                 F           Salary            NaN   \n",
+       "3       WATER MGMNT                 F           Salary            NaN   \n",
+       "4              OEMC                 P           Hourly           20.0   \n",
        "\n",
-       "    Annual Salary  Hourly Rate  \n",
-       "0        101442.0          NaN  \n",
-       "1         94122.0          NaN  \n",
-       "2        101592.0          NaN  \n",
-       "3        110064.0          NaN  \n",
-       "4             NaN        19.86  \n",
-       "5         50436.0          NaN  \n",
-       "6             NaN        46.10  \n",
-       "7             NaN        35.60  \n",
-       "8        103350.0          NaN  \n",
-       "9         93354.0          NaN  \n",
-       "10            NaN         2.65  \n",
-       "11        84054.0          NaN  \n",
-       "12        87006.0          NaN  \n",
-       "13       102228.0          NaN  \n",
-       "14        84054.0          NaN  \n",
-       "15        91272.0          NaN  \n",
-       "16       111492.0          NaN  \n",
-       "17        95484.0          NaN  \n",
-       "18            NaN        17.68  \n",
-       "19            NaN        46.10  "
+       "   Annual Salary  Hourly Rate  \n",
+       "0       101442.0          NaN  \n",
+       "1        94122.0          NaN  \n",
+       "2       101592.0          NaN  \n",
+       "3       110064.0          NaN  \n",
+       "4            NaN        19.86  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +175,7 @@
    "source": [
     "# Your code here:\n",
     "\n",
-    "salaries.head(20)"
+    "salaries.head()"
    ]
   },
   {
@@ -397,12 +187,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Typical Hours    25161\n",
+       "Annual Salary     8022\n",
+       "Hourly Rate      25161\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "null_cols = salaries.isnull().sum()\n",
+    "null_cols[null_cols > 0]"
    ]
   },
   {
@@ -414,12 +220,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salary    25161\n",
+       "Hourly     8022\n",
+       "Name: Salary or Hourly, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "salaries['Salary or Hourly'].value_counts()"
    ]
   },
   {
@@ -438,12 +258,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "POLICE OFFICER                                 9520\n",
+       "FIREFIGHTER-EMT                                1473\n",
+       "SERGEANT                                       1202\n",
+       "POOL MOTOR TRUCK DRIVER                        1055\n",
+       "POLICE OFFICER (ASSIGNED AS DETECTIVE)          989\n",
+       "MOTOR TRUCK DRIVER                              705\n",
+       "SANITATION LABORER                              625\n",
+       "FIREFIGHTER                                     487\n",
+       "CONSTRUCTION LABORER                            465\n",
+       "CROSSING GUARD                                  451\n",
+       "TRAFFIC CONTROL AIDE-HOURLY                     418\n",
+       "LIEUTENANT-EMT                                  408\n",
+       "LIEUTENANT                                      367\n",
+       "CROSSING GUARD - PER CBA                        358\n",
+       "PARAMEDIC                                       337\n",
+       "PARAMEDIC I/C                                   264\n",
+       "FIREFIGHTER/PARAMEDIC                           254\n",
+       "FIREFIGHTER-EMT (RECRUIT)                       251\n",
+       "GENERAL LABORER - DSS                           236\n",
+       "POLICE OFFICER / FLD TRNG OFFICER               231\n",
+       "POLICE COMMUNICATIONS OPERATOR I                226\n",
+       "ELECTRICAL MECHANIC                             225\n",
+       "POLICE COMMUNICATIONS OPERATOR II               225\n",
+       "DETENTION AIDE                                  221\n",
+       "FIRE ENGINEER-EMT                               217\n",
+       "AVIATION SECURITY OFFICER                       217\n",
+       "HOISTING ENGINEER                               191\n",
+       "OPERATING ENGINEER-GROUP A                      187\n",
+       "LIBRARY PAGE                                    183\n",
+       "MACHINIST (AUTOMOTIVE)                          160\n",
+       "                                               ... \n",
+       "SECRETARY TO THE CHAIRMAN                         1\n",
+       "LOAN PROCESSING SPECIALIST                        1\n",
+       "DENTIST                                           1\n",
+       "ASST CHIEF HIGHWAY ENGINEER                       1\n",
+       "AREA COORD - CAPS                                 1\n",
+       "ASST SUPVSR OF POLICE RECORDS                     1\n",
+       "COMMISSIONER OF FAMILY AND SUPPORT SERVICES       1\n",
+       "COLLECTIONS REPRESENTATIVE                        1\n",
+       "MANAGING EDITOR COUNCIL JOURNAL                   1\n",
+       "MGR OF FOOD PROTECTION SERVICES                   1\n",
+       "ELECTRONIC RESOURCES LIBRARIAN                    1\n",
+       "ENVIRONMENTAL ENGINEER I                          1\n",
+       "ASST PROGRAM DIR                                  1\n",
+       "CUSTOMER SERVICES SUPVSR                          1\n",
+       "ASST COORD OF COLLECTION MANAGEMENT               1\n",
+       "COMM MAYORS OFF PEOPLE W DISABILITIES             1\n",
+       "CHIEF PLUMBING INSPECTOR                          1\n",
+       "COMPUTER APPL ANALYST II-ELECTIONS                1\n",
+       "SERGEANT AT ARMS                                  1\n",
+       "CHIEF FIRE PREVENTION ENGINEER                    1\n",
+       "COMMISSIONER OF CHICAGO PUBLIC LIBRARY            1\n",
+       "EXECUTIVE LEGAL SECRETARY                         1\n",
+       "TECHNICAL SUPPORT ADMIN - IGO                     1\n",
+       "SENIOR LEGAL INVESTIGATOR                         1\n",
+       "CHIEF CONSTRUCTION EQUIPMENT INSPECTOR            1\n",
+       "REPROGRAPHICS TECHNICIAN I/C                      1\n",
+       "ASST DISTRICT MANAGER-HUMAN SERVICES              1\n",
+       "CITY PROSECUTOR                                   1\n",
+       "MANAGER OF REGULATORY REVIEW                      1\n",
+       "MECHANICAL ENGINEER III                           1\n",
+       "Name: Job Titles, Length: 1111, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "salaries['Job Titles'].value_counts()"
    ]
   },
   {
